# imdb-trakt-sync

./: .travis.yml  Dockerfile  README.md  csv2json.py  csvtojson.sh  diff-history.sh  diff-movie-watchlist.sh  diff-ratings.sh  diff-show-watchlist.sh  diff-watchlist.sh  diff.js  docker-compose.test.yml  imdb-movie-watchlist.sh  imdb-ratings.js  imdb-ratings.sh  imdb-show-watchlist.sh  imdb-watchlist.js  imdb-watchlist.sh  imdb_trakt_sync.py  index.js  main.py  main.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  start.js  sync.sh  template.yaml  trakt-history.sh  trakt-movie-watchlist.sh  trakt-ratings.sh  trakt-show-watchlist.sh  trakt-update-history.sh  trakt-update-ratings.sh  trakt-update-watchlist.sh  trakt-watchlist.sh
.github/workflows/: docker.yml  lint.yml  merge.yml  shellcheck.yml  sync.yml  trakt.yml
