[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imdb-trakt-sync"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0,<9.0",
    "requests>=2.0.0,<3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "imdb_trakt_sync/__init__.py"

[project.scripts]
imdb-trakt-sync = "imdb_trakt_sync:main"

[project.optional-dependencies]
test = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.5.0",
    "types-requests>=2.0.0,<3.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
