[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "imdb-trakt-sync"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "click>=8,<9",
    "requests>=2,<3",
]
scripts.imdb-trakt-sync = "imdb_trakt_sync:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.5",
    "types-requests>=2,<3",
]

[tool.hatch.build.targets.wheel.force-include]
"imdb_trakt_sync.py" = "imdb_trakt_sync/__init__.py"

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
